style.css
body{
    background-color: var(--backgroundColor);
    /* height: 100%;    */
    margin: 0;
    padding: 0;
    --red: #D12533;

    /* --backgroundColor: #DDAC6D; */
    --backgroundColor: #E09A62;

}

h1{
    color: var(--red)
}

.gallery{
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    /* justify-content: center; */
    padding: 0 2rem;

    .galleryImg{
        display: flex;

        max-height: 100vh;
        min-height: 100vh;
        background-color: aqua;
        width: 70%;

        .imgCol{
            max-height: 100%;
            width: 25%;
            display: flex;
            flex-direction: column;
            background-color: red;
            justify-content: space-around;
     
            img{

                /* max-height: 100%; */

    
                max-width: 65%;

                .tower{
                    max-height: 2%;
                }

            }
     
        }
    }



    h1{
        font-family: "Libre Bodoni", serif;
        font-optical-sizing: auto;
  
        font-style: normal;
        
        font-size: 5rem;
        color: var(--red);

    }

    

}

.navBar{
    position: fixed;
    height: 100vh;
    z-index: 999;
    width: 4%;
    align-items: center;
    background-color: #95764D;
    display: flex;
    justify-content: space-evenly;
    writing-mode: vertical-lr;
    transform: rotate(180deg);
    color: white;
    font-size: 1.2rem;

 
    p{
        margin: 0;
        padding: 0;

    a{
        text-decoration: none;
        color: white;
    }

    a:hover{
        text-decoration: underline;

    }
        
    }
    
    
   






}

.landing{
    width: 100vw;
    margin: 0;
    img{
        width: 100%;
        height: auto;
    }
       
              
}


.container{
    background-color: red;
    min-height: 100vh;
    background-color: var(--backgroundColor);
    /* display: flex; */
    h1{
        margin: 0;
    }
    position: relative;
}

.bonjour{
    /* height: 100%; */
    /* min-height: 100vh; */

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    .top{
        display: flex;
        justify-content: space-evenly;
        align-content: flex-end;
        min-height: 30vh;
        width: 90%;
        /* background-color: red; */

        /* align-self: flex-end; */
        /* width: 100%; */
        

        .title{
            align-self: flex-end;
            padding: 0;
            margin: 0;
            font-size: 4rem;
            color: var(--red);
            
        }
       
        

    }
    .bottom{
        width: 60%;
        padding: 3rem;


        p{
            color: white;
            font-size: 2rem;
        }

    }

}


.about{

    display: flex;
    flex-direction: column;
    align-items: center;
    /* justify-content: center; */
    padding: 0 2rem;

    img{
        width: 60%;
    }


    h1{
        font-family: "Libre Bodoni", serif;
        font-optical-sizing: auto;
  
        font-style: normal;
        
        font-size: 5rem;
        color: var(--red);

    }

    .bottom{
        width: 70%;
        padding: 2rem;


        p{
            color: white;
            font-size: 1.5rem;
        }

    }
    

}

.mustsee{
    margin: 5% 0; /*[topbottom] [leftright] */
    left: 4%;
    width: 96%; 
    /* text-align: left; */
    display: flex;
    /* flex-direction: column; */
    /* align-items: right; */
    /* justify-content: center; */
    .left{
        display: flex;
        flex-direction: column;
        text-align: center;
        /* background-color: aqua; */
        /* padding-left: 10%; */
        max-width: 50%;
        font-size: 5rem;
        color: var(--red);
        h5{
            padding: 0;
            margin: 0;
            color: var(--red);
            font-size: 0.25em;
        }
        
        
    }
    .right{
        display: flex;
        flex-direction: column;
        max-width: 50%;

        a{
            text-decoration: none;
            color: black;
        }

        a:hover{
            text-decoration: underline;

        }

        p{
            color: white;
            font-size: 1.5rem;
            padding: 0;
            margin: 0;
            font-family: "Antic Didone", serif;
            font-weight: 400;
            font-style: normal;
        }

        h3{
            font-size: 3rem;
            padding: 0;
            margin: 0;
            font-family: "Libre Bodoni", serif;
            font-optical-sizing: auto;
            font-style: normal;
        }

        .infoCard{
            margin: 3% 0;
            padding: 0 10%;


        }
     


    }

    
    /* padding: 0 10vh; */

  
    
 

   

}

.shopping{
    flex-direction: row-reverse;
}

